<resources>
    <string name="app_name">c02</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="enter_email_to_update">Enter email to update:</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="show_all_users">Show All Users</string>
</resources>
