<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize|stateHidden"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addUserFragmentButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/add_user"/>

        <Button
            android:id="@+id/listUserFragmentButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/show_all_users"/>

        <Button
            android:id="@+id/updateUserFragmentButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/update_user"/>
    </LinearLayout>



    <EditText
        android:id="@+id/updateEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_to_update"
        tools:ignore="Autofill" />

    <FrameLayout
        android:id="@+id/containerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>